Ingress/service-b.yml
# service-b.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-b-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: service-b
  template:
    metadata:
      labels:
        app: service-b
    spec:
      containers:
      - name: service-b
        image: hashicorp/http-echo
        args:
        - "-text=Hello from Service B"
        ports:
        - containerPort: 5678

---
apiVersion: v1
kind: Service
metadata:
  name: service-b
spec:
  selector:
    app: service-b
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5678
