Ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: example-ingress
spec:
  rules:
    - host: example.com
      http:
        paths:
          - path: /app1
            pathType: Prefix
            backend:
              service:
                name: service-a
                port:
                  number: 80
          - path: /app2
            pathType: Prefix
            backend:
              service:
                name: service-b
                port:
                  number: 80
